[package]
name = "bililive-rs"
version = "0.1.0"
edition = "2018"

[lib]
name = "bililive_lib"
path = "src/lib.rs"

[[bin]]
name = "bililive_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["net"] }
tokio-tungstenite = { version = "0.14", features = ["native-tls"] }
reqwest = "0.11"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.2", features = ["serde"] }
nom = "6.2"
futures = "0.3"
flate2 = "1.0"
rand = "0.8"
log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.8"
stream-reconnect = { git = "https://github.com/PhotonQuantum/stream-reconnect" }

[dev-dependencies]
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
