[package]
name = "actix-bililive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
awc = { version = "3.0.0-beta.9", features = ["openssl"] }
actix-codec = "0.4"
stream-reconnect = { version = "0.4.0-beta.1", features = ["not-send"] }
bililive-core = { path = "../bililive-core", features = ["not-send"] }
serde = "1.0"
bytes = "1.1"
log = "0.4"
futures = "0.3"

[dev-dependencies]
actix-rt = "2.3"