[package]
name = "actix-bililive"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-codec = "0.4"
async-trait = "0.1"
awc = { version = "3.0.0-beta.9", features = ["openssl"] }
bililive-core = { path = "../bililive-core", features = ["not-send"] }
bytes = "1.1"
futures = "0.3"
log = "0.4"
serde = "1.0"
stream-reconnect = { version = "0.4.0-beta.1", features = ["not-send"] }

[dev-dependencies]
actix-rt = "2.3"
serde_json = "1.0"