[package]
name = "actix-bililive"
version = "0.1.0-beta.7"
authors = ["LightQuantum <self@lightquantum.me>"]
edition = "2021"
description = "A simple stream-based bilibili live client library for the Actix ecosystem."
license = "MIT"
keywords = ["bilibili", "live", "stream", "actix", "danmaku"]
repository = "https://github.com/PhotonQuantum/bililive-rs"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["openssl"]
openssl = ["awc/openssl"]
rustls = ["awc/rustls"]

[dependencies]
actix-codec = "0.4"
awc = "3.0.0-beta.15"
bililive-core = { version = "0.1.0-beta.3", path = "../bililive-core", features = ["not-send"] }
bytes = "1.1"
futures = "0.3"
log = "0.4"
serde = "1.0"
stream-reconnect = { version = "0.4.0-beta.1", features = ["not-send"] }

[dev-dependencies]
actix-rt = "2.5"
serde_json = "1.0"
