[package]
name = "bililive"
version = "0.1.1"
authors = ["LightQuantum <self@lightquantum.me>"]
edition = "2018"
description = "A simple stream-based bilibili live client library."
license = "MIT"
keywords = ["bilibili", "live", "stream", "client", "danmaku"]
repository = "https://github.com/PhotonQuantum/bililive-rs"
readme = "README.md"
exclude = [
    ".github/*",
    ".gitignore",
    ".mergify.yml",
    "rust-toolchain.toml"
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tokio-native-tls"]
tokio-native-tls = ["tokio", "async-tungstenite/tokio-native-tls", "reqwest/native-tls", "stream-reconnect/tokio", "bililive-core/tokio"]
tokio-rustls-webpki-roots = ["tokio", "async-tungstenite/tokio-rustls-webpki-roots", "reqwest/rustls-tls-webpki-roots", "stream-reconnect/tokio", "bililive-core/tokio"]
tokio-rustls-native-certs = ["tokio", "async-tungstenite/tokio-rustls-native-certs", "reqwest/rustls-tls-native-roots", "stream-reconnect/tokio", "bililive-core/tokio"]
async-native-tls = ["async-std", "async-tungstenite/async-native-tls", "h1-client", "http-client/native-tls", "stream-reconnect/async-std", "bililive-core/async-std"]
h1-client = ["http-client/h1_client"]

[dependencies]
async-std = { version = "1.10", optional = true }
async-trait = "0.1"
async-tungstenite = { version = "0.15", default-features = false }
bililive-core = { path = "../bililive-core", default-features = false }
futures = "0.3"
http-client = { version = "6.5", default-features = false, optional = true }
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, optional = true }
serde = "1.0"
serde_json = "1.0"
stream-reconnect = { git = "https://github.com/PhotonQuantum/stream-reconnect", default-features = false }
thiserror = "1.0"
tokio = { version = "1.12", optional = true }
url = { version = "2.2", features = ["serde"] }

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
pretty_env_logger = "0.4"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
